[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/warrior_front_invert.png" type="Texture" id=1]
[ext_resource path="res://Scenes/boxes/HurtBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/boxes/HitBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Battle/NegativePlayer.gd" type="Script" id=4]
[ext_resource path="res://Resources/Player.gdshader" type="Shader" id=5]
[ext_resource path="res://Scenes/Attack/EnemySwordAttack.tscn" type="PackedScene" id=6]

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/flash_color = Color( 0, 0, 0, 1 )
shader_param/flash_modifer = 0.0

[sub_resource type="CapsuleShape2D" id=1]
radius = 25.0
height = 76.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 51, 69 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 43, 62 )

[node name="NegativePlayer" type="KinematicBody2D"]
z_index = -1
collision_layer = 5
collision_mask = 5
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 4 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="HurtBox" parent="." instance=ExtResource( 2 )]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 2 )

[node name="HitBox" parent="HurtBox" instance=ExtResource( 3 )]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtBox/HitBox"]
shape = SubResource( 3 )

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="EnemySwordAttack" parent="." instance=ExtResource( 6 )]

[connection signal="hurt" from="HurtBox" to="." method="_on_HurtBox_hurt"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]

[editable path="HurtBox"]
[editable path="EnemySwordAttack"]
